--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -8,15 +8,27 @@
     z-index: 1000;
     display: flex;
     align-items: center;
+
+}
+
+.navbar-logo-container {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    /*border: 2px solid red;*/
+
 }
 
 .navbar-logo {
-    max-width: 100px;
+    max-width: 80px;
     height: auto;
     margin-left: 15px;
     padding-left: 0;
     transition: transform 0.3s ease, filter 0.3s ease;
     display: block;
+
+    /*DEBUGGING*/
+    /*border: 1px dashed yellow;*/
 }
 
 .navbar-logo:hover {
